Refactor FootballMatchFilterTest class to adapt it to the new logic